--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 
 # Data files
 data/
+!data/borders/README.md
 *.nc
 *.tif
 *.tiff
@@ -43,7 +44,6 @@ Thumbs.db
 
 # Cache and temp files
 110m/
-data/.cache/
 debug.log
 *.log
 
